Use right RECURSION_DEPTH, set --force-terminate for inspectIT execution